--- a/charts/jenkins/Chart.yaml
+++ b/charts/jenkins/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for deploying Jenkins CI
-name: jenkins-chart
+name: jenkins
 version: 0.1.0
