--- a/charts/jenkins/templates/deployment.yaml
+++ b/charts/jenkins/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
               containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
             - name: jnlp-port
-              containerPort: 50000
+              containerPort: {{ .Values.service.agentPort }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
