--- a/charts/jenkins/templates/deployment.yaml
+++ b/charts/jenkins/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           env:
             - name: JAVA_OPTS
-              value: -Djenkins.install.runSetupWizard=false
+              value: -Djenkins.install.runSetupWizard=false -Duser.timezone=Asia/Shanghai
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: jenkins-home
